[package]
name = "chumsky-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8"
proc-macro2 = "1.0"

[dev-dependencies]
quote = "1.0"

[[example]]
name = "proc-example"
crate-type = ["proc-macro"]
proc-macro = true
